--- a/grocery_app/pubspec.yaml
+++ b/grocery_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.2.3
   provider: ^6.1.2
   flutter_iconly: ^1.0.2
+  card_swiper : ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +64,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/images/
+    - assets/images/
+    - assets/images/cat/
+    - assets/images/landing/
+    - assets/images/offres/
 #     - assets/images/warning-sign.png
 #     - images/a_dot_ham.jpeg
 
