--- a/grocery_app/pubspec.yaml
+++ b/grocery_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.2
   flutter_iconly: ^1.0.2
   card_swiper : ^3.0.0
+  fancy_shimmer_image: ^2.0.3
 
 dev_dependencies:
   flutter_test:
