--- a/grocery_app/pubspec.yaml
+++ b/grocery_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_iconly: ^1.0.2
   card_swiper : ^3.0.0
   fancy_shimmer_image: ^2.0.3
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
